--- a/MAJOR-PROJECT/package.json
+++ b/MAJOR-PROJECT/package.json
@@ -1,8 +1,12 @@
 {
+  "engines": {
+    "node": "^16.14.0"
+  },
   "name": "major-project",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,12 +14,27 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.2",
+    "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
+    "form-data": "^4.0.5",
     "joi": "^18.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^9.0.1"
+    "mongoose": "^9.0.1",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^9.0.1"
   }
 }
