feat: Expand .gitignore to include common build artifacts, environment files, logs, IDE/OS specific files, and testing/production output.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,39 @@
-node_modules
+# Dependency directories
+node_modules/
+
+# Build directories
+dist/
+build/
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Testing
+coverage/
+
+# Production
+out/
+
+
 
 
